--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">= 8.1.3",
+    "npm": ">= 45.6.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TravelC/node-image-modify-test.git"
